# hive

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  docs-requirements.txt  example-config.toml  install.sh  mkdocs.yml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: config.toml.example
docs/: 404.md  adapters.md  architecture.md  changelog.md  configuration.md  contributing.md  enrichers.md  hooks.md  index.md  install.sh  mcp-reference.md  roadmap.md  security.md
docs/architecture/: capture.md  data-model.md  design-decisions.md  enrich.md  index.md  overview.md  serve.md  store.md
docs/getting-started/: configuration.md  desktop.md  faq.md  first-session.md  index.md  install-from-source.md  installation.md  quickstart.md  solo-mode.md  team-server.md  troubleshooting.md  upgrading.md
docs/javascripts/: install-pill.js
docs/operations/: backup-restore.md  deploying.md  index.md  monitoring.md  troubleshooting.md
docs/overrides/: main.html
docs/overrides/partials/: logo.html
docs/reference/: cli.md  configuration.md  enrichers.md  hooks.md  index.md  mcp-tools.md  rest-api.md
docs/solo-mode/: asking-claude.md  index.md  workflow.md
docs/stylesheets/: extra.css
docs/team-mode/: index.md
docs/tutorials/: annotating-sessions.md  asking-claude.md  authentication.md  custom-adapter.md  custom-enricher.md  file-lineage.md  index.md  onboarding-teammates.md  searching-your-history.md  searching.md  secret-scrubbing.md  server-setup.md  sharing-controls.md  workflow.md
docs/usage/: asking-claude.md  index.md  sharing-controls.md  workflow.md
hive-server/: Cargo.toml  downloadweights.py
hive-server/src/: main.rs
src/hive/: __init__.py  cli.py  config.py  mcp_server.py  privacy.py  scrub_patterns.toml  search.py  util.py
src/hive/auth/: __init__.py  client.py  config.py  middleware.py  models.py  oidc.py  routes.py  tokens.py
src/hive/capture/: __init__.py  base.py  claude_code.py  claude_desktop.py  git_hook.py
src/hive/enrich/: __init__.py  base.py  files.py  git.py  quality.py
src/hive/search/: __init__.py  base.py  elasticsearch.py  factory.py  helpers.py  pgvector.py  sqlite_vec.py  witchcraft.py
src/hive/serve/: __init__.py  api.py
src/hive/store/: __init__.py  db.py  models.py  query.py
src/hive/store/alembic/: env.py
src/hive/store/alembic/versions/: 001_baseline_schema.py  002_postgresql_fts.py  003_dedup_constraints.py  004_add_projects.py  005_add_auth_tables.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_dedup.py  test_enrich.py  test_mcp_server.py  test_pgvector_backend.py  test_postgresql.py  test_privacy.py  test_search_backends.py  test_store.py  test_util.py
