[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-team"
version = "0.1.0"
description = "Team server for Claude Code — capture, enrich, and share AI coding sessions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["claude", "ai", "sessions", "mcp", "developer-tools", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.12'",
    "tomli-w>=1.0",
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/sabre-ai/hive"
Repository = "https://github.com/sabre-ai/hive"
Issues = "https://github.com/sabre-ai/hive/issues"
Documentation = "https://github.com/sabre-ai/hive/tree/main/docs"

[project.scripts]
hive = "hive.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hive = ["scrub_patterns.toml"]
