[package]
name = "hive-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "HTTP search server for hive, powered by witchcraft"

[[bin]]
name = "hive-search"
path = "src/main.rs"

[dependencies]
witchcraft = { git = "https://github.com/dropbox/witchcraft.git", branch = "master" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
uuid = "1"
iso8601-timestamp = "0.3"
candle-core = { git = "https://github.com/huggingface/candle", rev = "0.10.1" }

[features]
default = ["t5-quantized", "progress"]
t5-quantized = ["witchcraft/t5-quantized"]
progress = ["witchcraft/progress"]
metal = ["witchcraft/metal"]
